--- a/config/dblift-postgresql.yaml
+++ b/config/dblift-postgresql.yaml
@@ -9,7 +9,13 @@ database:
   password: "dblift_pass"
 
 migrations:
-  directory: "./migrations"
+  directory: "./migrations/core"
+  directories:
+    - "./migrations/features"
+    - "./migrations/performance"
+  undo_directories:
+    - "./migrations/features"
+    - "./migrations/performance"
   recursive: true
   script_encoding: "utf-8"
 
