--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -60,6 +60,7 @@ jobs:
         continue-on-error: true
         run: |
           echo "Generating SARIF report..."
+          set +e
           docker run --rm \
             -v "$(pwd):/workspace" \
             ghcr.io/cmodiano/dblift:latest \
@@ -67,16 +68,23 @@ jobs:
             --dialect postgresql \
             --rules-file /workspace/config/.dblift_rules.yaml \
             --format sarif > validation-results.sarif
+          exit_code=$?
+          set -e
+
+          if [[ $exit_code -ne 0 ]]; then
+            echo "::warning::validate-sql exited with code ${exit_code}; SARIF output may be incomplete."
+          fi
 
           if [[ ! -s validation-results.sarif ]]; then
-            echo "SARIF report missing or empty." >&2
-            exit 1
+            echo "::warning::SARIF report missing or empty; skipping upload/comment."
+            rm -f validation-results.sarif
+            exit 0
           fi
 
           echo "sarif_path=validation-results.sarif" >> "$GITHUB_OUTPUT"
 
       - name: Upload SARIF to GitHub Security
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
         with:
@@ -84,7 +92,7 @@ jobs:
           category: sql-validation
 
       - name: Create PR comment with validation results
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
         uses: actions/github-script@v7
         with:
           script: |
