--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -45,10 +45,24 @@ jobs:
         continue-on-error: true
         run: |
           echo "Validating SQL migrations with DBLift..."
+          mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
+          if [[ ${#FILES[@]} -eq 0 ]]; then
+            echo "No SQL files to validate."
+            exit 0
+          fi
+
+          ARGS=()
+          for file in "${FILES[@]}"; do
+            ARGS+=("/workspace/${file}")
+          done
+
+          echo "Files passed to validator:"
+          printf ' - %s\n' "${FILES[@]}"
+
           docker run --rm \
             -v "$(pwd):/workspace" \
             ghcr.io/cmodiano/dblift:latest \
-            validate-sql /workspace/migrations/ /workspace/examples/migrations/ \
+            validate-sql "${ARGS[@]}" \
             --dialect postgresql \
             --rules-file /workspace/config/.dblift_rules.yaml \
             --format github-actions
@@ -61,10 +75,24 @@ jobs:
         run: |
           echo "Generating SARIF report..."
           set +e
+          mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
+          if [[ ${#FILES[@]} -eq 0 ]]; then
+            echo "No SQL files to include in SARIF."
+            exit 0
+          fi
+
+          ARGS=()
+          for file in "${FILES[@]}"; do
+            ARGS+=("/workspace/${file}")
+          done
+
+          echo "Files passed to SARIF validator:"
+          printf ' - %s\n' "${FILES[@]}"
+
           docker run --rm \
             -v "$(pwd):/workspace" \
             ghcr.io/cmodiano/dblift:latest \
-            validate-sql /workspace/migrations/ /workspace/examples/migrations/ \
+            validate-sql "${ARGS[@]}" \
             --dialect postgresql \
             --rules-file /workspace/config/.dblift_rules.yaml \
             --format sarif > validation-results.sarif
