--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Generate SARIF report with DBLift
         if: steps.changed-files.outputs.any_changed == 'true'
-        id: sarif
+        id: sarif_raw
         shell: bash
         continue-on-error: true
         run: |
@@ -109,31 +109,50 @@ jobs:
           if [[ ! -s validation-results.sarif ]]; then
             echo "::warning::SARIF report missing or empty; skipping upload/comment."
             rm -f validation-results.sarif
-            echo "sarif_path=" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
-          python <<'PY'
-            import json
-            from pathlib import Path
+      - name: Normalize SARIF output
+        if: steps.changed-files.outputs.any_changed == 'true'
+        id: sarif
+        shell: python
+        run: |
+          import json
+          import os
+          from pathlib import Path
 
-            sarif_path = Path("validation-results.sarif")
-            raw = sarif_path.read_text(encoding="utf-8")
-            start = raw.find("{")
-            end = raw.rfind("}")
-            if start == -1 or end == -1:
-                raise SystemExit("::warning::SARIF payload missing JSON object.")
+          sarif_path = Path("validation-results.sarif")
+          output_path = Path(os.environ["GITHUB_OUTPUT"])
 
-            clean = raw[start:end + 1]
-            try:
-                json.loads(clean)
-            except json.JSONDecodeError as exc:
-                raise SystemExit(f"::warning::Invalid SARIF JSON after cleanup: {exc}")
+          def write_output(value: str) -> None:
+              with output_path.open("a", encoding="utf-8") as fh:
+                  fh.write(f"sarif_path={value}\n")
 
-            sarif_path.write_text(clean, encoding="utf-8")
-          PY
+          if not sarif_path.exists() or sarif_path.stat().st_size == 0:
+              print("::warning::SARIF report missing or empty; skipping upload/comment.")
+              if sarif_path.exists():
+                  sarif_path.unlink()
+              write_output("")
+              raise SystemExit(0)
 
-          echo "sarif_path=validation-results.sarif" >> "$GITHUB_OUTPUT"
+          raw = sarif_path.read_text(encoding="utf-8")
+          start = raw.find("{")
+          end = raw.rfind("}")
+          if start == -1 or end == -1:
+              print("::warning::SARIF payload missing JSON object.")
+              write_output("")
+              raise SystemExit(0)
+
+          clean = raw[start:end + 1]
+          try:
+              json.loads(clean)
+          except json.JSONDecodeError as exc:
+              print(f"::warning::Invalid SARIF JSON after cleanup: {exc}")
+              write_output("")
+              raise SystemExit(0)
+
+          sarif_path.write_text(clean, encoding="utf-8")
+          write_output("validation-results.sarif")
 
       - name: Upload SARIF to GitHub Security
         if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
