--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -4,7 +4,6 @@ on:
   pull_request:
     paths:
       - 'migrations/**/*.sql'
-      - 'examples/migrations/**/*.sql'
       - 'config/.dblift_rules.yaml'
     types: [opened, synchronize, reopened]
 
@@ -31,7 +30,6 @@ jobs:
         with:
           files: |
             migrations/**/*.sql
-            examples/migrations/**/*.sql
 
       - name: List changed migrations
         if: steps.changed-files.outputs.any_changed == 'true'
@@ -45,72 +43,28 @@ jobs:
         continue-on-error: true
         run: |
           echo "Validating SQL migrations with DBLift..."
-          mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
-          if [[ ${#FILES[@]} -eq 0 ]]; then
-            echo "No SQL files to validate."
-            exit 0
-          fi
-
-          ARGS=()
-          for file in "${FILES[@]}"; do
-            ARGS+=("/workspace/${file}")
-          done
-
-          echo "Files passed to validator:"
-          printf ' - %s\n' "${FILES[@]}"
-
           docker run --rm \
-            -v "$(pwd):/workspace" \
-            ghcr.io/cmodiano/dblift:latest \
-            validate-sql "${ARGS[@]}" \
+            -v $(pwd)/migrations:/workspace/migrations \
+            -v $(pwd)/config/.dblift_rules.yaml:/workspace/.dblift_rules.yaml \
+            ghcr.io/dblift/dblift:validation-latest \
+            migrations/ \
             --dialect postgresql \
-            --rules-file /workspace/config/.dblift_rules.yaml \
-            --format github-actions
+            --rules-file .dblift_rules.yaml \
+            --format github-annotation || echo "Validation found issues"
 
       - name: Generate SARIF report with DBLift
         if: steps.changed-files.outputs.any_changed == 'true'
-        id: sarif_raw
-        shell: bash
         continue-on-error: true
         run: |
           echo "Generating SARIF report..."
-          mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
-          if [[ ${#FILES[@]} -eq 0 ]]; then
-            echo "No SQL files to include in SARIF."
-            echo "sarif_path=" >> "$GITHUB_OUTPUT"
-            exit 0
-          fi
-
-          ARGS=()
-          for file in "${FILES[@]}"; do
-            ARGS+=("/workspace/${file}")
-          done
-
-          echo "Files passed to SARIF validator:"
-          printf ' - %s\n' "${FILES[@]}"
-
-          set +e
-          {
-            docker run --rm \
-              -v "$(pwd):/workspace" \
-              ghcr.io/cmodiano/dblift:latest \
-              validate-sql "${ARGS[@]}" \
-              --dialect postgresql \
-              --rules-file /workspace/config/.dblift_rules.yaml \
-              --format sarif
-          } > validation-results.sarif 2> sarif.log
-          exit_code=$?
-          set -e
-
-          if [[ $exit_code -ne 0 ]]; then
-            echo "::warning::validate-sql exited with code ${exit_code}; SARIF output may be incomplete."
-          fi
-
-          if [[ ! -s validation-results.sarif ]]; then
-            echo "::warning::SARIF report missing or empty; skipping upload/comment."
-            rm -f validation-results.sarif
-            exit 0
-          fi
+          docker run --rm \
+            -v $(pwd)/migrations:/workspace/migrations \
+            -v $(pwd)/config/.dblift_rules.yaml:/workspace/.dblift_rules.yaml \
+            ghcr.io/dblift/dblift:validation-latest \
+            migrations/ \
+            --dialect postgresql \
+            --rules-file .dblift_rules.yaml \
+            --format sarif > validation-results.sarif || echo "SARIF generation completed"
 
       - name: Normalize SARIF output
         if: steps.changed-files.outputs.any_changed == 'true'
@@ -119,7 +73,9 @@ jobs:
         run: |
           import json
           import os
+          import sys
           from pathlib import Path
+          from urllib.parse import quote
 
           sarif_path = Path("validation-results.sarif")
           output_path = Path(os.environ["GITHUB_OUTPUT"])
@@ -133,29 +89,33 @@ jobs:
               if sarif_path.exists():
                   sarif_path.unlink()
               write_output("")
-              raise SystemExit(0)
+              sys.exit(0)
 
-          raw = sarif_path.read_text(encoding="utf-8")
-          start = raw.find("{")
-          end = raw.rfind("}")
-          if start == -1 or end == -1:
-              print("::warning::SARIF payload missing JSON object.")
-              write_output("")
-              raise SystemExit(0)
-
-          clean = raw[start:end + 1]
           try:
-              json.loads(clean)
+              data = json.loads(sarif_path.read_text(encoding="utf-8"))
           except json.JSONDecodeError as exc:
-              print(f"::warning::Invalid SARIF JSON after cleanup: {exc}")
+              print(f"::warning::Invalid SARIF JSON: {exc}")
               write_output("")
-              raise SystemExit(0)
+              sys.exit(0)
 
-          sarif_path.write_text(clean, encoding="utf-8")
-          write_output("validation-results.sarif")
+          prefix = "/workspace/"
+          for run in data.get("runs", []):
+              for result in run.get("results", []):
+                  for location in result.get("locations", []):
+                      physical = location.get("physicalLocation") or {}
+                      artifact = physical.get("artifactLocation") or {}
+                      uri = artifact.get("uri")
+                      if not uri:
+                          continue
+                      rel = uri[len(prefix):] if uri.startswith(prefix) else uri
+                      artifact["uri"] = quote(rel, safe="/._-")
+                      artifact["uriBaseId"] = "ROOTPATH"
+
+          sarif_path.write_text(json.dumps(data), encoding="utf-8")
+          write_output(str(sarif_path))
 
       - name: Upload SARIF to GitHub Security
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
         with:
@@ -163,35 +123,15 @@ jobs:
           category: sql-validation
 
       - name: Create PR comment with validation results
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            const core = require('@actions/core');
             
-            let sarifRaw;
-            try {
-              sarifRaw = fs.readFileSync('validation-results.sarif', 'utf8').trim();
-            } catch (err) {
-              core.warning(`SARIF file not found: ${err.message}`);
-              return;
-            }
-            
-            if (!sarifRaw) {
-              core.warning('SARIF file is empty; skipping PR comment.');
-              return;
-            }
-            
-            let sarif;
-            try {
-              sarif = JSON.parse(sarifRaw);
-            } catch (err) {
-              core.warning(`Failed to parse SARIF JSON: ${err.message}`);
-              return;
-            }
-            
-            const results = sarif.runs?.[0]?.results || [];
+            // Read SARIF results
+            const sarif = JSON.parse(fs.readFileSync('validation-results.sarif', 'utf8'));
+            const results = sarif.runs[0].results || [];
             
             const errors = results.filter(r => r.level === 'error').length;
             const warnings = results.filter(r => r.level === 'warning').length;
@@ -222,7 +162,17 @@ jobs:
               results.forEach(result => {
                 const severity = result.level === 'error' ? '❌' : result.level === 'warning' ? '⚠️' : 'ℹ️';
                 const location = result.locations[0].physicalLocation;
-                const file = location.artifactLocation.uri;
+                const artifact = location.artifactLocation || {};
+                const rawUri = artifact.uri || '';
+                let file;
+                try {
+                  file = decodeURIComponent(rawUri);
+                } catch {
+                  file = rawUri;
+                }
+                if (artifact.uriBaseId === 'ROOTPATH') {
+                  file = file.replace(/^ROOTPATH[\\/]/, '');
+                }
                 const line = location.region.startLine;
                 
                 comment += `${severity} **${result.ruleId}** (Line ${line})\n`;
