--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -18,7 +18,7 @@ jobs:
   validate-sql:
     name: Validate SQL Migrations
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -89,12 +89,12 @@ jobs:
           set +e
           {
             docker run --rm \
-            -v "$(pwd):/workspace" \
-            ghcr.io/cmodiano/dblift:latest \
-            validate-sql "${ARGS[@]}" \
-            --dialect postgresql \
-            --rules-file /workspace/config/.dblift_rules.yaml \
-            --format sarif
+              -v "$(pwd):/workspace" \
+              ghcr.io/cmodiano/dblift:latest \
+              validate-sql "${ARGS[@]}" \
+              --dialect postgresql \
+              --rules-file /workspace/config/.dblift_rules.yaml \
+              --format sarif
           } > validation-results.sarif 2> sarif.log
           exit_code=$?
           set -e
@@ -128,10 +128,19 @@ jobs:
               write_output("")
               sys.exit(0)
 
+          raw = sarif_path.read_text(encoding="utf-8")
+          start = raw.find("{")
+          end = raw.rfind("}")
+          if start == -1 or end == -1:
+              print("::warning::SARIF payload missing JSON object.")
+              write_output("")
+              sys.exit(0)
+
+          clean = raw[start:end + 1]
           try:
-              data = json.loads(sarif_path.read_text(encoding="utf-8"))
+              data = json.loads(clean)
           except json.JSONDecodeError as exc:
-              print(f"::warning::Invalid SARIF JSON: {exc}")
+              print(f"::warning::Invalid SARIF JSON after cleanup: {exc}")
               write_output("")
               sys.exit(0)
 
@@ -152,7 +161,7 @@ jobs:
           write_output(str(sarif_path))
 
       - name: Upload SARIF to GitHub Security
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path
+        if: steps.changed-files.outputs.any_changed == 'true' and steps.sarif.outputs.sarif_path
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
         with:
@@ -160,23 +169,22 @@ jobs:
           category: sql-validation
 
       - name: Create PR comment with validation results
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path
+        if: steps.changed-files.outputs.any_changed == 'true' and steps.sarif.outputs.sarif_path
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            
-            // Read SARIF results
+
             const sarif = JSON.parse(fs.readFileSync('validation-results.sarif', 'utf8'));
             const results = sarif.runs[0].results || [];
-            
+
             const errors = results.filter(r => r.level === 'error').length;
             const warnings = results.filter(r => r.level === 'warning').length;
             const infos = results.filter(r => r.level === 'note' || r.level === 'info').length;
-            
+
             let status = '✅ All validations passed!';
             let emoji = '✅';
-            
+
             if (errors > 0) {
               status = `❌ ${errors} error(s) found`;
               emoji = '❌';
@@ -184,7 +192,7 @@ jobs:
               status = `⚠️ ${warnings} warning(s) found`;
               emoji = '⚠️';
             }
-            
+
             let comment = `## ${emoji} SQL Validation Results\n\n`;
             comment += `**Status:** ${status}\n\n`;
             comment += `| Severity | Count |\n`;
@@ -192,10 +200,10 @@ jobs:
             comment += `| Errors   | ${errors} |\n`;
             comment += `| Warnings | ${warnings} |\n`;
             comment += `| Info     | ${infos} |\n\n`;
-            
+
             if (results.length > 0) {
               comment += `### Issues Found\n\n`;
-              
+
               results.forEach(result => {
                 const severity = result.level === 'error' ? '❌' : result.level === 'warning' ? '⚠️' : 'ℹ️';
                 const location = result.locations[0].physicalLocation;
@@ -211,18 +219,17 @@ jobs:
                   file = file.replace(/^ROOTPATH[\\/]/, '');
                 }
                 const line = location.region.startLine;
-                
+
                 comment += `${severity} **${result.ruleId}** (Line ${line})\n`;
                 comment += `📄 \`${file}\`\n`;
                 comment += `> ${result.message.text}\n\n`;
               });
             }
-            
+
             comment += `\n---\n`;
             comment += `💡 **Tip:** Check the [Security](../../security/code-scanning) tab for detailed SARIF analysis.\n`;
             comment += `📖 Review our [validation rules](../blob/main/config/.dblift_rules.yaml) for more information.`;
-            
-            // Post comment
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
