--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -161,7 +161,7 @@ jobs:
           write_output(str(sarif_path))
 
       - name: Upload SARIF to GitHub Security
-        if: steps.changed-files.outputs.any_changed == 'true' and steps.sarif.outputs.sarif_path
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
         with:
@@ -169,7 +169,7 @@ jobs:
           category: sql-validation
 
       - name: Create PR comment with validation results
-        if: steps.changed-files.outputs.any_changed == 'true' and steps.sarif.outputs.sarif_path
+        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
         uses: actions/github-script@v7
         with:
           script: |
