--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -37,20 +37,31 @@ jobs:
             examples/migrations/**/*.sql
 
       - name: List changed migrations
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' || github.event_name == 'push'
         run: |
           echo "Changed SQL files:"
           echo "${{ steps.changed-files.outputs.all_changed_files }}"
 
       - name: Validate SQL with DBLift Docker Image
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' || github.event_name == 'push'
         id: validate
         continue-on-error: true
         run: |
           echo "Validating SQL migrations with DBLift..."
           mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
           if [[ ${#FILES[@]} -eq 0 ]]; then
-            echo "No SQL files detected; skipping validation."
+            if [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
+              echo "No changed files detected on push; validating full directories."
+              docker run --rm \
+                -v "$(pwd):/workspace" \
+                ghcr.io/cmodiano/dblift:latest \
+                validate-sql /workspace/migrations /workspace/examples/migrations \
+                --dialect postgresql \
+                --rules-file /workspace/config/.dblift_rules.yaml \
+                --format github-actions || echo "Validation found issues (see output above)."
+            else
+              echo "No SQL files detected; skipping validation."
+            fi
             exit 0
           fi
 
@@ -71,14 +82,35 @@ jobs:
             --format github-actions || echo "Validation found issues (see output above)."
 
       - name: Generate SARIF report with DBLift
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' || github.event_name == 'push'
         continue-on-error: true
         run: |
           echo "Generating SARIF report..."
           mapfile -t FILES < <(echo "${{ steps.changed-files.outputs.all_changed_files }}" | tr ' ' '\n' | sed '/^$/d')
           if [[ ${#FILES[@]} -eq 0 ]]; then
-            echo "No SQL files detected; skipping SARIF generation."
-            exit 0
+            if [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
+              echo "No changed files detected on push; generating SARIF for full directories."
+              set +e
+              {
+                docker run --rm \
+                  -v "$(pwd):/workspace" \
+                  ghcr.io/cmodiano/dblift:latest \
+                  validate-sql /workspace/migrations /workspace/examples/migrations \
+                  --dialect postgresql \
+                  --rules-file /workspace/config/.dblift_rules.yaml \
+                  --format sarif
+              } > validation-results.sarif 2> sarif.log
+              exit_code=$?
+              set -e
+
+              if [[ $exit_code -ne 0 ]]; then
+                echo "::warning::validate-sql exited with code ${exit_code}; SARIF output may be incomplete."
+              fi
+              exit 0
+            else
+              echo "No SQL files detected; skipping SARIF generation."
+              exit 0
+            fi
           fi
 
           ARGS=()
@@ -107,7 +139,7 @@ jobs:
           fi
 
       - name: Normalize SARIF output
-        if: steps.changed-files.outputs.any_changed == 'true'
+        if: steps.changed-files.outputs.any_changed == 'true' || github.event_name == 'push'
         id: sarif
         shell: python
         run: |
@@ -164,7 +196,7 @@ jobs:
           write_output(str(sarif_path))
 
       - name: Upload SARIF to GitHub Security
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
+        if: (steps.changed-files.outputs.any_changed == 'true' || github.event_name == 'push') && steps.sarif.outputs.sarif_path != ''
         uses: github/codeql-action/upload-sarif@v3
         continue-on-error: true
         with:
@@ -172,7 +204,7 @@ jobs:
           category: sql-validation
 
       - name: Create PR comment with validation results
-        if: steps.changed-files.outputs.any_changed == 'true' && steps.sarif.outputs.sarif_path != ''
+        if: github.event_name == 'pull_request' && steps.sarif.outputs.sarif_path != ''
         uses: actions/github-script@v7
         with:
           script: |
